--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Welcome to My Website!</h1>
-	<a href="./public/about.html"><img src="./assets/Images/Beruang.jpg" alt="Beruang"></a>
+	<a href="./public/about.html"><img src="./assets/images/Beruang.jpg" alt="Beruang"></a>
 
 	<hr/>
 	<a href="./public/contact.html">Contact Me</a>
